# office-suite

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
crates/apps/calendar/: Cargo.toml
crates/apps/calendar/src/: document.rs  event.rs  ical.rs  lib.rs
crates/apps/mail/: Cargo.toml
crates/apps/mail/src/: document.rs  lib.rs  message.rs  thread.rs
crates/apps/notes/: Cargo.toml
crates/apps/notes/src/: document.rs  lib.rs  note.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/crdt/: Cargo.toml
crates/crdt/src/: document.rs  lib.rs  sync.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: capabilities.rs  lib.rs  runtime.rs  wasi.rs
crates/storage/: Cargo.toml
crates/storage/src/: cid.rs  lib.rs  store.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs  nats_relay.rs  p2p.rs  protocol.rs
