[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crdt",
    "crates/sync",
    "crates/sandbox",
    "crates/storage",
    "crates/apps/calendar",
    "crates/apps/mail",
    "crates/apps/notes",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/office-suite"

[workspace.dependencies]
# CRDT
automerge = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Wasm runtime
wasmtime = "18"
wasmtime-wasi = "18"

# P2P
libp2p = "0.53"

# NATS
async-nats = "0.33"

# Content addressing
sha2 = "0.10"
base58 = "0.2"
multibase = "0.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Internal crates
office-core = { path = "crates/core" }
office-crdt = { path = "crates/crdt" }
office-sync = { path = "crates/sync" }
office-sandbox = { path = "crates/sandbox" }
office-storage = { path = "crates/storage" }
