[package]
name = "office-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
office-core.workspace = true
office-crdt.workspace = true
office-storage.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
