[package]
name = "office-app-calendar"
version.workspace = true
edition.workspace = true

[dependencies]
office-core.workspace = true
office-crdt.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
