[package]
name = "office-app-notes"
version.workspace = true
edition.workspace = true

[dependencies]
office-core.workspace = true
office-crdt.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
